# batterything

./: .gitmodules  CMakeLists.txt  README.md
include/: cgroups.hpp  plogformatter.hpp  processes.hpp  windowfocus.hpp
src/: background_mode.cpp  battery_thing.cpp  battery_thing_ui.cpp  cgroups.cpp  plogformatter.cpp  processes.cpp  windowfocus.cpp
